package com.example.composetoglance.mapper.node

import com.example.toolkit.proto.ColumnLayoutProperty
import com.example.toolkit.proto.Dimension
import com.example.toolkit.proto.HorizontalAlignment
import com.example.toolkit.proto.VerticalAlignment
import com.example.toolkit.proto.ViewProperty
import com.example.toolkit.proto.WidgetNode

//data class ColumnNode(
//    val viewProperty: ViewProperty,
//    val horizontalAlignment: HorizontalAlignment = HorizontalAlignment.H_ALIGN_CENTER,
//    val verticalAlignment: VerticalAlignment = VerticalAlignment.V_ALIGN_TOP,
//    val children: List<EditorNode>
//) : EditorNode {
//    override fun toProto(): WidgetNode {
//    }
//}